feat: Atualizar configuração do ambiente, implementar novas rotas e componentes para gerenciamento de transações

--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,8 @@
-DB_HOST=capital-db.railway.internal
+DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=weZUFfbFTrbYrThTnSRPesfNLvBnzQFg
-DB_NAME=railway
+DB_PASSWORD=BananaAmassada#333
+DB_NAME=dbcapital
 
-NODE_ENV=production
+NODE_ENV=development
 JWT_SECRET=your_jwt_secret
